# CBudgie

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  cmake_clean.cmake  test.bg  test2.bg
Example/: test.bg  test2.bg  test3.bg  test4.bg  test5.bg  test_1.bbg  test_1.bg
Example/.__bgCache__/: test3.bbg  test3_1.bbg  test4.bbg
Examples/: test.bg  test2.bg  test3.bg  test3_1.bg  test4.bg  test5.bg  test_1.bg
Interpreter/: Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Translator.cpp  Translator.h
Main/: main.cpp
VM/: Instruction.h  VM.cpp  VM.h  WrappedVar.h  readbytecode.cpp  readbytecode.h
VirtualMachine/: VirtualMachine.cpp  VirtualMachine.h  WrappedVar.h
dependance/: AST.h  Error.h  Opcode.h  Token.h  math.h
docs/: BNF.md  start.md
interpreter/: CMakeLists.txt  Makefile  ast.h  interpreter  lexer.cpp  main.cpp  parser.cpp  parser.h  readFile.h  var.h
interpreter/depen/: ast.h  var.h
interpreter/lexer/: lexer.cpp  lexer.h  readFile.h
interpreter/parser/: boolsupport.cpp  function.hpp  mathsupport.cpp  parser.cpp  parser.h  parser_bool.h  parser_error.cpp  parser_error.h  parser_main.cpp  parser_math.h  parser_var.cpp  parser_var.h
